DUnion.GeneratorTests/TestCases/Valid/UnionStruct.source.cs
using DUnion;

namespace Valid.UnionStruct;

[DUnion]
public readonly partial struct Union
{
    public record struct Case();
}